Added new online calibration

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -71,6 +71,7 @@
     "\n",
     "max_dist = 50 # cm\n",
     "for i, row in df_total.iterrows():\n",
+    "    \n",
     "\n",
     "    positions_cm = row.positions[:, :3] * 100\n",
     "    \n",
@@ -78,31 +79,33 @@
     "    fig.set_size_inches(10, 3.3)\n",
     "    fig.suptitle(row.appendix, y=1.0)\n",
     "    \n",
+    "    mask_time = (row.seconds > min_time) & (row.seconds < max_time)\n",
+    "    time = row.seconds[mask_time]\n",
+    "    \n",
     "    #axs[0].plot(x=positions_cm[:, 0], y=positions_cm[:, 1], color=colors())\n",
-    "    sns.scatterplot(x=positions_cm[:, 0], y=positions_cm[:, 1], \n",
-    "                    hue=row.seconds, ax=axs[0], linewidth=0, \n",
+    "    sns.scatterplot(x=positions_cm[mask_time, 0], y=positions_cm[mask_time, 1], \n",
+    "                    hue=time, ax=axs[0], linewidth=0, \n",
     "                    #size=positions_cm[:, 2],\n",
     "                    palette='inferno')\n",
     "    axs[0].set_xlabel('x [cm]')\n",
     "    axs[0].set_ylabel('y [cm]')\n",
-    "    axs[0].set_xlim(-max_dist/2, max_dist/2)\n",
-    "    axs[0].set_ylim(-max_dist/2, max_dist/2)\n",
+    "    #axs[0].set_xlim(-max_dist/2, max_dist/2)\n",
+    "    #axs[0].set_ylim(-max_dist/2, max_dist/2)\n",
+    "    axs[0].axis('equal')\n",
     "    axs[0].legend(loc='lower right', title='time [s]')\n",
     "\n",
-    "    axs[1].plot(row.seconds, positions_cm[:, 0], label='x')\n",
-    "    axs[1].plot(row.seconds, positions_cm[:, 1], label='y')\n",
-    "    axs[1].plot(row.seconds, positions_cm[:, 2], label='z')\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 0], label='x')\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 1], label='y')\n",
+    "    axs[1].plot(time, positions_cm[mask_time, 2], label='z')\n",
     "    axs[1].set_xlabel('time [s]')\n",
     "    axs[1].set_ylabel('movement [cm]')\n",
     "    axs[1].set_ylim(-max_dist, max_dist)\n",
-    "    axs[1].set_xlim(min_time, max_time)\n",
     "    axs[1].legend(loc='lower right')\n",
     "\n",
-    "    axs[2].plot(row.seconds, row.positions[:, 3], label='yaw')\n",
+    "    axs[2].plot(time, row.positions[mask_time, 3], label='yaw')\n",
     "    axs[2].set_ylabel('yaw [deg]')\n",
     "    axs[2].set_xlabel('time [s]')\n",
     "    axs[2].set_ylim(-20, 20)\n",
-    "    axs[2].set_xlim(min_time, max_time)\n",
     "    axs[2].legend(loc='lower right')\n",
     "\n",
     "    plt.tight_layout()\n",
@@ -145,8 +148,6 @@
     "max_freq = 5000\n",
     "\n",
     "#maxi = np.nanmax(np.concatenate([*dfs.spectrogram], axis=1))\n",
-    "fig2, ax_tot = plt.subplots()\n",
-    "fig2.set_size_inches(10, 5)\n",
     "for i_col, row in df_total.iterrows():\n",
     "    all_frequencies = np.unique(row.frequencies_matrix)\n",
     "    spec = row.spectrogram[:, mic_idx, :]\n",
@@ -155,19 +156,13 @@
     "    \n",
     "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    fig, ax = plt.subplots()\n",
-    "    fig.suptitle(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
+    "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
     "    fig.set_size_inches(5, 5)\n",
     "    ax.pcolorfast(row.seconds, \n",
     "                  all_frequencies, spec[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_ylim(min_freq, max_freq)\n",
-    "    ax.set_xlim(min_time, max_time)\n",
-    "    \n",
-    "    ax_tot.plot(all_frequencies, total, color=f\"C{i_col}\", label=label)\n",
-    "ax_tot.legend(loc='upper right')\n",
-    "#ax_tot.set_ylim(0, 3)\n",
-    "ax_tot.set_yscale('log')\n",
-    "ax_tot.set_xlim(min_freq, max_freq)"
+    "    ax.set_xlim(min_time, max_time)"
    ]
   },
   {
@@ -176,12 +171,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simulation import get_freq_slice_theory\n",
     "from dataset_parameters import kwargs_datasets\n",
+    "from simulation import get_freq_slice_theory\n",
     "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "\n",
-    "distances_grid = np.arange(20, 70)\n",
+    "distances_grid = np.arange(30, 80)\n",
     "frequencies = np.linspace(kwargs[\"min_freq\"], kwargs[\"max_freq\"], 30)\n",
     "\n",
     "df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
@@ -199,7 +194,18 @@
    "outputs": [],
    "source": [
     "from wall_detector import WallDetector, get_probability_cost, get_probability_fft\n",
+    "from calibration import get_calibration_function_dict\n",
     "from frequency_analysis import get_index_matrix\n",
+    "from plotting_tools import add_colorbar\n",
+    "\n",
+    "distance_dict = {\n",
+    "    '_30cm-paper': 42,\n",
+    "    '_30cm-nopaper': 42,\n",
+    "    '_30cm-newbuzzer': 42,\n",
+    "    '_50cm-paper': 57,\n",
+    "    '_50cm-nopaper': 65,\n",
+    "    '_50cm-newbuzzer': 70,\n",
+    "}\n",
     "\n",
     "fig, ax_slices = plt.subplots()\n",
     "fig.set_size_inches(5, 5)\n",
@@ -207,35 +213,41 @@
     "fig.set_size_inches(5, 5)\n",
     "\n",
     "#appendix_plot = '-newbuzzer'\n",
-    "#appendix_plot = '-paper'\n",
-    "appendix_plot = '-nopaper'\n",
+    "appendix_plot = '-paper'\n",
+    "#appendix_plot = '-nopaper'\n",
     "\n",
     "i_col = 0\n",
     "for _, row in df_total.iterrows():\n",
     "    \n",
     "    if not appendix_plot in row.appendix:\n",
     "        continue\n",
+    "        \n",
+    "    if 'newbuzzer' in row.appendix: \n",
+    "        calib_function = get_calibration_function_dict(exp_name=\"2021_02_25_wall\", mic_type=\"audio_deck\", motors=0)\n",
+    "    else:\n",
+    "        calib_function = get_calibration_function_dict(exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", motors=0)\n",
     "    \n",
     "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    wall_detector = WallDetector(exp_name=exp_name)\n",
     "    spec_masked, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "    \n",
     "    time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
+    "    \n",
     "    index_matrix = get_index_matrix(spec_masked)\n",
     "    \n",
+    "    seconds = row.seconds[time_mask]\n",
     "    spec_masked = spec_masked[:, :, time_mask]\n",
     "    \n",
-    "    nominal_distance = int(row.appendix.split('cm')[0][-2:])\n",
+    "    nominal_distance = distance_dict[row.appendix]\n",
     "    strongest_freqs = freqs_masked[index_matrix[0, time_mask]]\n",
     "    \n",
-    "    # extract \"moving\" \n",
+    "    # extract \"moving\" slice\n",
     "    f_slice_varying = [spec_masked[f_idx, mic_idx, idx] for idx, f_idx in enumerate(index_matrix[0, time_mask])]\n",
-    "    relative_ds = row.positions[time_mask, 1] * 100\n",
+    "    relative_ds = - row.positions[time_mask, 1] * 100\n",
     "    absolute_yaws = row.positions[time_mask, 3]\n",
     "    assert len(f_slice_varying) == len(strongest_freqs)\n",
     "    assert len(relative_ds) == len(f_slice_varying)\n",
     "    \n",
-    "    distances_y = relative_ds + nominal_distance \n",
+    "    distances_y = nominal_distance + relative_ds\n",
     "    \n",
     "    fig, ax = plt.subplots()\n",
     "    ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
@@ -251,34 +263,70 @@
     "    fig, ax = plt.subplots()\n",
     "    ax.set_title(f'spectrogram of mic{mic_idx}, {label}')\n",
     "    fig.set_size_inches(10, 5)\n",
-    "    ax.pcolorfast(row.seconds[time_mask], \n",
-    "                  freqs_masked, spec[:-1, :-1])\n",
+    "    im = ax.pcolorfast(seconds, freqs_masked, spec[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_ylim(min_freq, max_freq)\n",
+    "    add_colorbar(fig, ax, im)\n",
     "    \n",
     "    wall_detector.remove_bad_freqs(verbose=True)\n",
     "    wall_detector.remove_spurious_freqs(verbose=True)\n",
     "    f_slice, freqs = wall_detector.get_frequency_slice()\n",
-    "    ax_slices.plot(freqs, f_slice[mic_idx, :], label=label, color=f'C{i_col}')\n",
+    "    f_slice = f_slice[mic_idx]\n",
+    "    ax_slices.plot(freqs, f_slice, label=label, color=f'C{i_col}')\n",
     "    ax_slices.scatter(strongest_freqs, f_slice_varying, label=label + ' varying', color=f'C{i_col}')\n",
     "    \n",
+    "    # normalize\n",
+    "    f_slice_varying_norm = f_slice_varying / calib_function(strongest_freqs)[mic_idx]\n",
+    "    f_slice_norm = f_slice / calib_function(freqs)[mic_idx]\n",
+    "    \n",
+    "    fig, axs = plt.subplots(2, 1)\n",
+    "    fig.set_size_inches(10, 5)\n",
+    "    f_slice_theory = get_freq_slice_theory(strongest_freqs, distances_y)[:, mic_idx]\n",
+    "    #frequency_indices = np.argmin(np.abs(frequencies[:, None] - strongest_freqs[None, :]), axis=0)\n",
+    "    #distance_indices = np.argmin(np.abs(distances_grid[:, None] - distances_y[None, :]), axis=0)\n",
+    "    #f_slice_theory_test = df_matrix_theo[frequency_indices, distance_indices]\n",
+    "    \n",
+    "    f_slice_varying -= np.mean(f_slice_varying)\n",
+    "    f_slice_varying /= np.std(f_slice_varying)\n",
+    "    f_slice_theory -= np.mean(f_slice_theory)\n",
+    "    f_slice_theory /= np.std(f_slice_theory)\n",
+    "    \n",
+    "    axs[0].plot(seconds, f_slice_varying, label='experimental')\n",
+    "    axs[0].plot(seconds, f_slice_varying_norm, label='experimental normalized')\n",
+    "    axs[0].plot(seconds, f_slice_theory, label='theoretical')\n",
+    "    axs[0].legend()\n",
+    "    axs[0].grid(which='both')\n",
+    "    axs[1].plot(seconds, strongest_freqs)\n",
+    "    axs[1].grid(which='both')\n",
+    "    \n",
     "    proba_cost = get_probability_cost(\n",
-    "        f_slice[mic_idx, :], freqs, distances_grid, mic_idx=mic_idx\n",
+    "        f_slice, freqs, distances_grid, mic_idx=mic_idx\n",
     "    )\n",
     "    proba_cost_mvmt = get_probability_cost(\n",
     "        f_slice_varying, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
     "    )\n",
+    "    proba_cost_norm = get_probability_cost(\n",
+    "        f_slice_norm, freqs, distances_grid, mic_idx=mic_idx\n",
+    "    )\n",
+    "    proba_cost_mvmt_norm = get_probability_cost(\n",
+    "        f_slice_varying_norm, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
+    "    )\n",
     "    \n",
     "    ax_proba_cost.plot(distances_grid, proba_cost, label=label, color=f'C{i_col}')\n",
     "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt, label=label + ' varying', color=f'C{i_col}', ls=':')\n",
+    "    ax_proba_cost.plot(distances_grid, proba_cost_norm, label=label + ' norm', color=f'C{i_col}', ls='-')\n",
+    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt_norm, label=label + ' varying norm', color=f'C{i_col}', \n",
+    "                       ls='-.')\n",
+    "    ax_proba_cost.axvline(nominal_distance, label=f'ground truth {label}', color=f'C{i_col}')\n",
     "    i_col += 1\n",
+    "    break\n",
     "    \n",
-    "ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
+    "#ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
     "\n",
     "ax_slices.legend(loc='upper left')\n",
-    "[ax.legend(loc='upper left') for ax in [ax_proba_fft, ax_proba_cost]]\n",
-    "[ax.set_ylabel('probability') for ax in [ax_proba_fft, ax_proba_cost]]\n",
-    "[ax.set_xlabel('distance [cm]') for ax in [ax_proba_fft, ax_proba_cost]]\n",
+    "[ax.legend(loc='upper left') for ax in [ax_proba_cost]]\n",
+    "[ax.set_ylabel('probability') for ax in [ax_proba_cost]]\n",
+    "[ax.set_xlabel('distance [cm]') for ax in [ax_proba_cost]]\n",
     "\n",
     "save_fig(fig_cost, f'plots/{exp_name}{appendix_plot}_cost.pdf')"
    ]
