--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -173,7 +173,6 @@
     "from wall_detector import WallDetector, normalized_std\n",
     "from frequency_analysis import get_index_matrix\n",
     "\n",
-    "\n",
     "mag_thresh = 1.0 # tested for 25_* and 23_* dataset\n",
     "ymin = 1e-4\n",
     "ymax = 3e2\n",
@@ -409,12 +408,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from calibration import get_calibration_function\n",
+    "from calibration import get_calibration_function, get_calibration_function_dict\n",
     "from wall_detector import normalize_df_matrix\n",
     "from copy import deepcopy\n",
     "from simulation import get_df_theory\n",
     "\n",
-    "calib_function = get_calibration_function(plot=False)\n",
+    "fig, ax = plt.subplots()\n",
+    "calib_function_old = get_calibration_function(ax=ax)\n",
+    "ax.set_title(\"old calibration\")\n",
+    "fig, ax = plt.subplots()\n",
+    "calib_function = get_calibration_function_dict(**filter_dict, ax=ax)\n",
+    "ax.set_title(\"new calibration\")\n",
     "\n",
     "max_distance = 50\n",
     "#distances_grid = np.arange(0, max_distance + 1)\n",
@@ -584,6 +588,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. study frequency slices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -598,6 +609,7 @@
     "method_dict = {\n",
     "    'raw': \"\",\n",
     "    'normalize': \"normalize\",\n",
+    "    'calibration-offline-old': calib_function_old,\n",
     "    'calibration-offline': calib_function,\n",
     "    'calibration-online': \"calibration-online\",\n",
     "    'standardize': \"standardize\",\n",
@@ -614,10 +626,8 @@
     "df_theory_pruned = df_theory[:, indices, :]\n",
     "\n",
     "for j, (key, method) in enumerate(method_dict.items()):\n",
-    "    df_matrix = row.df_matrix\n",
-    "\n",
     "    values = None\n",
-    "    df_matrix = df_matrix[:, indices, :]\n",
+    "    df_matrix = row.df_matrix[:, indices, :]\n",
     "\n",
     "    if key == \"raw\":\n",
     "        df_norm = deepcopy(df_matrix)\n",
@@ -635,6 +645,18 @@
     "    # print(key, data_type, df_norm.shape)\n",
     "    min_value = min(min_value, -abs(np.min(df_norm)))\n",
     "    max_value = max(max_value, abs(np.max(df_norm)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from calibration import get_calibration_function_matrix\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "get_calibration_function_matrix(row.df_matrix, row.df_freq, ax=ax)"
    ]
   },
   {
@@ -673,42 +695,6 @@
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    \n",
     "    save_fig(fig, f\"plots/{fname}_matrices_{normalization}.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# theoretical vs. measured: matrices\n",
-    "df_exp = results.loc[results.normalization == \"raw\"].iloc[0].matrix[plot_channel_idx]\n",
-    "\n",
-    "fig, axs = plt.subplots(1, 2, squeeze=False, sharey=True)\n",
-    "[ax.set_xlabel(\"distance [cm]\") for ax in axs.flatten()]\n",
-    "axs[0, 0].set_title(row.mic_type + \" mic\")\n",
-    "axs[0, 0].set_ylabel('frequency [Hz]')\n",
-    "axs[0, 1].set_title(\"theoretical\")\n",
-    "\n",
-    "min_freq = min(df_freq)\n",
-    "max_freq = max(df_freq)\n",
-    "\n",
-    "fig.set_size_inches(10, 5)\n",
-    "# plot_df_matrix(row.df_dist, row.df_freq, df_norm[i], ax=axs[0, i], min_freq=min_freq, max_freq=max_freq, vmin=1e-3, vmax=3)\n",
-    "ax, im = plot_df_matrix(\n",
-    "    row.df_dist, df_freq, df_exp, ax=axs[0, 0], min_freq=min_freq, max_freq=max_freq\n",
-    ")\n",
-    "add_colorbar(fig, ax, im)\n",
-    "ax, im = plot_df_matrix(\n",
-    "    row.df_dist,\n",
-    "    df_freq,\n",
-    "    df_the,\n",
-    "    ax=axs[0, 1],\n",
-    "    min_freq=min_freq,\n",
-    "    max_freq=max_freq,\n",
-    ")\n",
-    "add_colorbar(fig, ax, im)\n",
-    "save_fig(fig, f\"plots/{fname}_matrices.png\")"
    ]
   },
   {
