--- a/notebooks/WallStudy.ipynb
+++ b/notebooks/WallStudy.ipynb
@@ -22,8 +22,14 @@
     "#%matplotlib notebook\n",
     "\n",
     "from matplotlib import rcParams\n",
-    "\n",
-    "rcParams[\"figure.max_open_warning\"] = False"
+    "import matplotlib.font_manager\n",
+    "#print([k for k in rcParams.keys() if \"figure\" in k])\n",
+    "plt.rcParams.update({\n",
+    "    \"figure.figsize\": (10, 5),\n",
+    "    \"figure.max_open_warning\": False,\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"sans-serif\",\n",
+    "    \"font.sans-serif\": [\"Helvetica\"]})"
    ]
   },
   {
@@ -517,12 +523,14 @@
     "beta_arr = np.linspace(-np.pi, np.pi, 361)\n",
     "delta_matrix = get_delta(d_arr[None, :], beta_arr[:, None], d0)\n",
     "\n",
-    "plt.figure()\n",
+    "fig = plt.figure()\n",
+    "fig.set_size_inches(5, 5)\n",
     "for j, d in enumerate(d_arr):\n",
     "    plt.plot(beta_arr * 180 / np.pi, delta_matrix[:, j], label=f\"{d}cm\")\n",
-    "plt.xlabel(\"beta [deg]\")\n",
-    "plt.ylabel(\"delta [cm]\")\n",
-    "plt.legend(bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"orthogonal distance\")\n",
+    "plt.xlabel(\"wall angle $\\\\beta$ [deg]\")\n",
+    "plt.ylabel(\"path difference $d_1-d_0$ [cm]\")\n",
+    "l = plt.legend(bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"orthogonal \\n distance $d$\")\n",
+    "plt.setp(l.get_title(), multialignment='center')\n",
     "plt.grid()"
    ]
   },
@@ -532,6 +540,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib as mpl\n",
+    "mpl.rc('text', usetex = True)\n",
+    "\n",
     "from plotting_tools import save_fig\n",
     "from simulation import get_orthogonal_distance\n",
     "\n",
@@ -544,10 +555,11 @@
     "fig.set_size_inches(5, 5)\n",
     "for j, d in enumerate(delta_arr):\n",
     "    plt.plot(beta_arr * 180 / np.pi, d_matrix[:, j], label=f\"{d}cm\")\n",
-    "plt.xlabel(\"wall angle [deg]\")\n",
-    "plt.ylabel(\"orthogonal distance [cm]\")\n",
+    "plt.xlabel(\"wall angle $\\\\beta$ [deg]\")\n",
+    "plt.ylabel(\"orthogonal distance $d$ [cm]\")\n",
     "plt.grid(which=\"both\")\n",
-    "plt.legend(bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"delta\")\n",
+    "l = plt.legend(bbox_to_anchor=[1.0, 1.0], loc=\"upper left\", title=\"path difference \\n $d_1 - d_0$\")\n",
+    "plt.setp(l.get_title(), multialignment='center')\n",
     "save_fig(fig, \"plots/theory_distances.png\")"
    ]
   },
