Add 'offline' calibration

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -172,17 +172,20 @@
    "outputs": [],
    "source": [
     "from dataset_parameters import kwargs_datasets\n",
-    "from simulation import get_freq_slice_theory\n",
+    "\n",
+    "def get_df_theory(frequencies, distances_grid, mic_idx):\n",
+    "    from simulation import get_freq_slice_theory\n",
+    "    df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
+    "    for j, distance_cm in enumerate(distances_grid):\n",
+    "        slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
+    "        df_matrix_theo[:, j] = slice_mics[:, mic_idx]\n",
+    "    return df_matrix_theo\n",
     "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
-    "\n",
     "distances_grid = np.arange(30, 80)\n",
     "frequencies = np.linspace(kwargs[\"min_freq\"], kwargs[\"max_freq\"], 30)\n",
     "\n",
-    "df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
-    "for j, distance_cm in enumerate(distances_grid):\n",
-    "    slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
-    "    df_matrix_theo[:, j] = slice_mics[:, mic_idx]"
+    "df_matrix_theo = get_df_theo(frequencies, distances_grid, mic_idx)"
    ]
   },
   {
@@ -207,128 +210,135 @@
     "    '_50cm-newbuzzer': 70,\n",
     "}\n",
     "\n",
-    "fig, ax_slices = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "fig_cost, ax_proba_cost = plt.subplots()\n",
-    "fig.set_size_inches(5, 5)\n",
-    "\n",
-    "#appendix_plot = '-newbuzzer'\n",
-    "appendix_plot = '-paper'\n",
+    "appendix_plot = '-newbuzzer'\n",
+    "#appendix_plot = '-paper'\n",
     "#appendix_plot = '-nopaper'\n",
-    "\n",
-    "i_col = 0\n",
-    "for _, row in df_total.iterrows():\n",
+    "for appendix_plot in ['-newbuzzer']:#,'-paper','-nopaper']:\n",
     "    \n",
-    "    if not appendix_plot in row.appendix:\n",
-    "        continue\n",
+    "    for _, row in df_total.iterrows():\n",
+    "        if not appendix_plot in row.appendix:\n",
+    "            continue\n",
+    "\n",
+    "        fig, ax = plt.subplots()\n",
+    "        if 'newbuzzer' in row.appendix: \n",
+    "            calib_function = get_calibration_function_dict(exp_name=\"2021_02_25_wall\", mic_type=\"audio_deck\", motors=0, ax=ax)\n",
+    "        else:\n",
+    "            calib_function = get_calibration_function_dict(exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", motors=0, ax=ax)\n",
+    "            \n",
+    "        nominal_distance = distance_dict[row.appendix]\n",
+    "        label = str(f\"{row.appendix}\").replace('_', '')\n",
     "        \n",
-    "    if 'newbuzzer' in row.appendix: \n",
-    "        calib_function = get_calibration_function_dict(exp_name=\"2021_02_25_wall\", mic_type=\"audio_deck\", motors=0)\n",
-    "    else:\n",
-    "        calib_function = get_calibration_function_dict(exp_name=\"2021_02_23_wall\", mic_type=\"audio_deck\", motors=0)\n",
-    "    \n",
-    "    label = str(f\"{row.appendix}\").replace('_', '')\n",
-    "    wall_detector = WallDetector(exp_name=exp_name)\n",
-    "    spec_masked, freqs_masked = wall_detector.fill_from_row(row)\n",
-    "    time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
-    "    \n",
-    "    index_matrix = get_index_matrix(spec_masked)\n",
-    "    \n",
-    "    seconds = row.seconds[time_mask]\n",
-    "    spec_masked = spec_masked[:, :, time_mask]\n",
-    "    \n",
-    "    nominal_distance = distance_dict[row.appendix]\n",
-    "    strongest_freqs = freqs_masked[index_matrix[0, time_mask]]\n",
-    "    \n",
-    "    # extract \"moving\" slice\n",
-    "    f_slice_varying = [spec_masked[f_idx, mic_idx, idx] for idx, f_idx in enumerate(index_matrix[0, time_mask])]\n",
-    "    relative_ds = - row.positions[time_mask, 1] * 100\n",
-    "    absolute_yaws = row.positions[time_mask, 3]\n",
-    "    assert len(f_slice_varying) == len(strongest_freqs)\n",
-    "    assert len(relative_ds) == len(f_slice_varying)\n",
-    "    \n",
-    "    distances_y = nominal_distance + relative_ds\n",
-    "    \n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
-    "    ax.scatter(distances_y, strongest_freqs, color='C1', s=5)\n",
-    "    ax.axvline(nominal_distance, color='C1', ls=':')\n",
-    "    ax.set_ylim(min(frequencies), max(frequencies))\n",
-    "    ax.set_title(f'DF of mic{mic_idx}, {label}')\n",
-    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_df.pdf')\n",
-    "    \n",
-    "    spec = spec_masked[:, mic_idx, :]\n",
-    "    spec[spec == 0] = np.nan\n",
-    "    \n",
-    "    fig, ax = plt.subplots()\n",
-    "    ax.set_title(f'spectrogram of mic{mic_idx}, {label}')\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    im = ax.pcolorfast(seconds, freqs_masked, spec[:-1, :-1])\n",
-    "    ax.set_ylabel('frequency [Hz]')\n",
-    "    ax.set_ylim(min_freq, max_freq)\n",
-    "    add_colorbar(fig, ax, im)\n",
-    "    \n",
-    "    wall_detector.remove_bad_freqs(verbose=True)\n",
-    "    wall_detector.remove_spurious_freqs(verbose=True)\n",
-    "    f_slice, freqs = wall_detector.get_frequency_slice()\n",
-    "    f_slice = f_slice[mic_idx]\n",
-    "    ax_slices.plot(freqs, f_slice, label=label, color=f'C{i_col}')\n",
-    "    ax_slices.scatter(strongest_freqs, f_slice_varying, label=label + ' varying', color=f'C{i_col}')\n",
-    "    \n",
-    "    # normalize\n",
-    "    f_slice_varying_norm = f_slice_varying / calib_function(strongest_freqs)[mic_idx]\n",
-    "    f_slice_norm = f_slice / calib_function(freqs)[mic_idx]\n",
-    "    \n",
-    "    fig, axs = plt.subplots(2, 1)\n",
-    "    fig.set_size_inches(10, 5)\n",
-    "    f_slice_theory = get_freq_slice_theory(strongest_freqs, distances_y)[:, mic_idx]\n",
-    "    #frequency_indices = np.argmin(np.abs(frequencies[:, None] - strongest_freqs[None, :]), axis=0)\n",
-    "    #distance_indices = np.argmin(np.abs(distances_grid[:, None] - distances_y[None, :]), axis=0)\n",
-    "    #f_slice_theory_test = df_matrix_theo[frequency_indices, distance_indices]\n",
-    "    \n",
-    "    f_slice_varying -= np.mean(f_slice_varying)\n",
-    "    f_slice_varying /= np.std(f_slice_varying)\n",
-    "    f_slice_theory -= np.mean(f_slice_theory)\n",
-    "    f_slice_theory /= np.std(f_slice_theory)\n",
-    "    \n",
-    "    axs[0].plot(seconds, f_slice_varying, label='experimental')\n",
-    "    axs[0].plot(seconds, f_slice_varying_norm, label='experimental normalized')\n",
-    "    axs[0].plot(seconds, f_slice_theory, label='theoretical')\n",
-    "    axs[0].legend()\n",
-    "    axs[0].grid(which='both')\n",
-    "    axs[1].plot(seconds, strongest_freqs)\n",
-    "    axs[1].grid(which='both')\n",
-    "    \n",
-    "    proba_cost = get_probability_cost(\n",
-    "        f_slice, freqs, distances_grid, mic_idx=mic_idx\n",
-    "    )\n",
-    "    proba_cost_mvmt = get_probability_cost(\n",
-    "        f_slice_varying, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
-    "    )\n",
-    "    proba_cost_norm = get_probability_cost(\n",
-    "        f_slice_norm, freqs, distances_grid, mic_idx=mic_idx\n",
-    "    )\n",
-    "    proba_cost_mvmt_norm = get_probability_cost(\n",
-    "        f_slice_varying_norm, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
-    "    )\n",
-    "    \n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost, label=label, color=f'C{i_col}')\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt, label=label + ' varying', color=f'C{i_col}', ls=':')\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_norm, label=label + ' norm', color=f'C{i_col}', ls='-')\n",
-    "    ax_proba_cost.plot(distances_grid, proba_cost_mvmt_norm, label=label + ' varying norm', color=f'C{i_col}', \n",
-    "                       ls='-.')\n",
-    "    ax_proba_cost.axvline(nominal_distance, label=f'ground truth {label}', color=f'C{i_col}')\n",
-    "    i_col += 1\n",
-    "    break\n",
-    "    \n",
-    "#ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
+    "        wall_detector = WallDetector(exp_name=exp_name)\n",
+    "        spec_masked, freqs_masked = wall_detector.fill_from_row(row)\n",
+    "        \n",
+    "        ### extract times of interest ###\n",
+    "        time_mask = (row.seconds > kwargs[\"min_time\"]) & (row.seconds < kwargs[\"max_time\"]) \n",
+    "        spec_masked = spec_masked[:, :, time_mask]\n",
+    "        seconds = row.seconds[time_mask]\n",
     "\n",
-    "ax_slices.legend(loc='upper left')\n",
-    "[ax.legend(loc='upper left') for ax in [ax_proba_cost]]\n",
-    "[ax.set_ylabel('probability') for ax in [ax_proba_cost]]\n",
-    "[ax.set_xlabel('distance [cm]') for ax in [ax_proba_cost]]\n",
+    "        ### extract varying slice ### \n",
+    "        index_matrix = get_index_matrix(spec_masked)\n",
+    "        strongest_freqs = freqs_masked[index_matrix[0, :]]\n",
+    "        f_slice_varying = [spec_masked[f_idx, mic_idx, idx] for idx, f_idx in enumerate(index_matrix[0, :])]\n",
+    "        relative_ds = - row.positions[time_mask, 1] * 100\n",
+    "        absolute_yaws = row.positions[time_mask, 3]\n",
+    "        distances_y = nominal_distance + relative_ds\n",
     "\n",
-    "save_fig(fig_cost, f'plots/{exp_name}{appendix_plot}_cost.pdf')"
+    "        wall_detector.remove_bad_freqs(verbose=True)\n",
+    "        wall_detector.remove_spurious_freqs(verbose=True)\n",
+    "        f_slice, freqs = wall_detector.get_frequency_slice()\n",
+    "        f_slice = f_slice[mic_idx]\n",
+    "        f_calib = calib_function(freqs)[mic_idx]\n",
+    "        \n",
+    "        fig, ax_slices = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        ax_slices.plot(freqs, f_slice, label=label)\n",
+    "        ax_slices.plot(freqs, f_calib, label=label + ' calib')\n",
+    "        ax_slices.scatter(strongest_freqs, f_slice_varying)\n",
+    "\n",
+    "        ### calibrate ###\n",
+    "        f_slice_varying_norm = f_slice_varying / calib_function(strongest_freqs)[mic_idx]\n",
+    "        f_slice_norm = f_slice / calib_function(freqs)[mic_idx]\n",
+    "        f_slice_varying_theory = get_freq_slice_theory(strongest_freqs, distances_y)[:, mic_idx]\n",
+    "\n",
+    "        fig, axs = plt.subplots(2, 1)\n",
+    "        fig.set_size_inches(10, 5)\n",
+    "        f_slice_norm -= np.mean(f_slice_norm)\n",
+    "        f_slice_norm /= np.std(f_slice_norm)\n",
+    "        f_slice_varying -= np.mean(f_slice_varying)\n",
+    "        f_slice_varying /= np.std(f_slice_varying)\n",
+    "        f_slice_varying_theory -= np.mean(f_slice_theory)\n",
+    "        f_slice_varying_theory /= np.std(f_slice_theory)\n",
+    "        f_slice_varying_norm -= np.mean(f_slice_varying_norm)\n",
+    "        f_slice_varying_norm /= np.std(f_slice_varying_norm)\n",
+    "\n",
+    "        axs[0].plot(seconds, f_slice_varying, label='experimental')\n",
+    "        axs[0].plot(seconds, f_slice_varying_norm, label='experimental calibrated')\n",
+    "        axs[0].plot(seconds, f_slice_varying_theory, label='theoretical')\n",
+    "        axs[0].legend()\n",
+    "        axs[0].grid(which='both')\n",
+    "        axs[1].plot(seconds, strongest_freqs)\n",
+    "        axs[1].grid(which='both')\n",
+    "    \n",
+    "    \n",
+    "        ##### algorithm #####\n",
+    "        #proba_cost = get_probability_cost(\n",
+    "        #    f_slice, freqs, distances_grid, mic_idx=mic_idx\n",
+    "        #)\n",
+    "        #proba_cost_norm = get_probability_cost(\n",
+    "        #    f_slice_norm, freqs, distances_grid, mic_idx=mic_idx\n",
+    "        #)\n",
+    "        proba_cost_mvmt = get_probability_cost(\n",
+    "            f_slice_varying, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
+    "        )\n",
+    "        proba_cost_mvmt_norm = get_probability_cost(\n",
+    "            f_slice_varying_norm, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
+    "        )\n",
+    "        proba_cost_mvmt_theory = get_probability_cost(\n",
+    "            f_slice_varying_theory, strongest_freqs, distances_grid, mic_idx=mic_idx, relative_ds=relative_ds, absolute_yaws=absolute_yaws\n",
+    "        )\n",
+    "        fig_cost, ax_proba_cost = plt.subplots()\n",
+    "        fig.set_size_inches(5, 5)\n",
+    "        #ax_proba_cost.plot(distances_grid, proba_cost, label=label)\n",
+    "        #ax_proba_cost.plot(distances_grid, proba_cost_norm, label=label + ' calibrated')\n",
+    "        ax_proba_cost.plot(distances_grid, proba_cost_mvmt, label=label)\n",
+    "        ax_proba_cost.plot(distances_grid, proba_cost_mvmt_norm, label=label + ' calibrated')\n",
+    "        ax_proba_cost.plot(distances_grid, proba_cost_mvmt_theory, label=label + ' theory')\n",
+    "        ax_proba_cost.axvline(nominal_distance, label=f'ground truth {label}', color='black')\n",
+    "        ax_proba_cost.legend(loc='upper left', bbox_to_anchor=[1.0, 1.0]) \n",
+    "        ax_proba_cost.set_ylabel('probability')\n",
+    "        ax_proba_cost.set_xlabel('distance [cm]')\n",
+    "        ax_proba_cost.set_yscale('log')\n",
+    "        \n",
+    "        ### full df ###\n",
+    "        fig, ax = plt.subplots()\n",
+    "        ax.pcolorfast(distances_grid, frequencies, df_matrix_theo[:-1, :-1])\n",
+    "        ax.scatter(distances_y, strongest_freqs, color='C1', s=5)\n",
+    "        ax.axvline(nominal_distance, color='C1')\n",
+    "        ax.set_ylim(min(frequencies), max(frequencies))\n",
+    "        ax.set_title(f'DF of mic{mic_idx}, {label}')\n",
+    "        ax.set_xlabel('distance [cm]')\n",
+    "        ax.set_ylabel('frequency [Hz]')\n",
+    "        save_fig(fig, f'plots/{exp_name}{row.appendix}_df.pdf')\n",
+    "        \n",
+    "        ### small df ###\n",
+    "        #d_sorted = np.sort(distances_y)\n",
+    "        #f_sorted = np.sort(strongest_freqs)\n",
+    "        d_sorted = np.arange(min(distances_y), max(distances_y), step=0.1) #np.sort(distances_y)\n",
+    "        f_sorted = np.arange(min(strongest_freqs), max(strongest_freqs), step=50) #np.sort(strongest_freqs)\n",
+    "        df_small = get_df_theory(f_sorted, d_sorted, mic_idx)\n",
+    "        fig, axs = plt.subplots(1, 2, sharey=True)\n",
+    "        axs[0].pcolorfast(d_sorted, f_sorted, df_small[:-1, :-1])\n",
+    "        \n",
+    "        frequency_indices = np.argmin(np.abs(f_sorted[:, None] - strongest_freqs[None, :]), axis=0)\n",
+    "        #np.testing.assert_allclose(f_sorted[frequency_indices], strongest_freqs)\n",
+    "        distance_indices = np.argmin(np.abs(d_sorted[:, None] - distances_y[None, :]), axis=0)\n",
+    "        df_small[frequency_indices, distance_indices] = f_slice_varying\n",
+    "        axs[1].pcolorfast(d_sorted, f_sorted, df_small[:-1, :-1])\n",
+    "\n",
+    "    #ax_proba_fft.set_xlim(min(distances_grid), max(distances_grid))\n",
+    "    #save_fig(fig_cost, f'plots/{exp_name}{appendix_plot}_cost.pdf')\n",
+    "    ax_slices.legend(loc='upper left')"
    ]
   },
   {
