--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -75,13 +75,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Experimental distance-frequency matrix"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -119,6 +112,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Experimental distance-frequency matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -130,8 +130,8 @@
     "# exp_name = '2021_02_09_wall';\n",
     "#exp_name = \"2021_02_23_wall\"\n",
     "#exp_name = \"2021_02_25_wall\"\n",
-    "exp_name = \"2021_03_01_flying\"\n",
-    "# exp_name = '2021_02_19_windows';\n",
+    "#exp_name = \"2021_03_01_flying\"\n",
+    "exp_name = '2021_02_19_windows';\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
     "# fname = f'results/{exp_name}_real.pkl'\n",
@@ -303,8 +303,8 @@
     "\n",
     "title = f'distance={row.distance}cm mic{mic}'\n",
     "ax_slice.set_title(title)\n",
-    "#ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
-    "ax_slice.legend()\n",
+    "ax_slice.legend(loc=\"upper left\", bbox_to_anchor=[1.0, 1.0])\n",
+    "#ax_slice.legend()\n",
     "save_fig(fig_slice, f\"plots/{exp_name}{row.appendix}_slice.png\")"
    ]
   },
@@ -468,7 +468,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -828,13 +828,6 @@
     "    fname_here = f\"plots/{fname}_{key}_frequency_performance.png\"\n",
     "    save_fig(fig, fname_here)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
